# queuepeek

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  config.example.toml  go.mod  go.sum  main.go
.github/workflows/: ci.yml  release.yml
_go_archive/: go.mod  go.sum
_go_archive/cmd/bgtest/: main.go
_go_archive/internal/config/: config.go
_go_archive/internal/ui/: messages.go  profileselect.go
cmd/: root.go
docs/: _config.yml  architecture.md  backends.md  configuration.md  features.md  index.md  keyboard-shortcuts.md
internal/config/: config.go
internal/rabbit/: client.go
internal/ui/: app.go  helpers.go  keys.go  messages.go  profileselect.go  queueitem.go  searchbar.go  sidebar.go  statusbar.go  styles.go
src/: app.rs  comparison.rs  config.rs  filters.rs  main.rs  operations.rs  rabbit.rs  schema.rs  updater.rs  utils.rs
src/backend/: kafka.rs  mod.rs  mqtt.rs  rabbitmq.rs
src/keys/: exchange_list.rs  message_detail.rs  message_list.rs  mod.rs  popup.rs  profile.rs  queue_list.rs
src/ui/: exchange_list.rs  main_view.rs  message_detail.rs  message_list.rs  mod.rs  popup.rs  profiles.rs  queue_list.rs  theme.rs
