[package]
name = "queuepeek"
version = "0.6.0"
edition = "2021"
description = "A TUI multi-broker message queue inspector"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
tui-input = "0.11"
urlencoding = "2"
arboard = "3"
rdkafka = { version = "0.36", features = ["cmake-build"] }
rumqttc = "0.24"
uuid = { version = "1", features = ["v4"] }
self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }
tokio = { version = "1", features = ["rt"] }
base64 = "0.22"
flate2 = "1"
similar = "2"
