[package]
name = "queuepeek"
version = "0.8.5"
edition = "2021"
description = "A TUI multi-broker message queue inspector for RabbitMQ, Kafka, and MQTT"
license = "MIT"
repository = "https://github.com/matutetandil/queuepeek"
homepage = "https://github.com/matutetandil/queuepeek"
readme = "README.md"
keywords = ["tui", "rabbitmq", "kafka", "mqtt", "queue"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Matias Denda <matutetandil@gmail.com>"]
exclude = ["CLAUDE.md", "CLAUDE.local.md", ".github/"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
tui-input = "0.11"
urlencoding = "2"
arboard = "3"
rdkafka = { version = "0.36", features = ["cmake-build"] }
rumqttc = "0.24"
uuid = { version = "1", features = ["v4"] }
self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }
tokio = { version = "1", features = ["rt"] }
base64 = "0.22"
flate2 = "1"
similar = "2"
regex = "1"
apache-avro = "0.17"
libc = "0.2"
